# mentor_practice

./: .env.example  .gitignore  Dockerfile  create_db.py  index.html  main.py  manage.py  message.html  pyproject.toml  query_1.sql  query_10.sql  query_11.sql  query_12.sql  query_2.sql  query_3.sql  query_4.sql  query_5.sql  query_6.sql  query_7.sql  query_8.sql  query_9.sql  university.db  university.sql
MAIN_APP/: asgi.py  environment.py  settings.py  urls.py  wsgi.py
client/: main.css
front-init/: error.html  index.html  style.css
procces/: factorize.py
quotes/: forms.py  models.py  urls.py  views.py
quotes/migrations/: 0001_initial.py  0002_auto_20230406_1620.py
quotes/service/: scrape_quotes.py
quotes/static/quote/: main.css
quotes/templates/quote/: add_author.html  add_quote.html  add_tags.html  author.html  base.html  edit_author.html  edit_quote.html  quote_confirm_delete.html  quotes.html  search_tag.html
server/: constants.py  main.py  utils.py  ws.py
storage/: data.json
threads/: garbage_sort.py
users/: forms.py  urls.py  views.py
users/templates/: login.html  logout.html  profile.html  register.html
