[tool.poetry]
name = "mentor-practice"
version = "0.1.0"
description = ""
authors = ["DanyloSolohub <danylo.solohub.te.2019@lpnu.ua>"]
readme = "README.md"
packages = [{include = "mentor_practice"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2"
django-environ = "^0.10.0"
psycopg2-binary = "^2.9.5"
django-bootstrap4 = "^22.3"
scrapy = "^2.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
